--- a/KatlaSport.DataAccess/packages.config
+++ b/KatlaSport.DataAccess/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Autofac" version="4.8.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
+  <package id="Microsoft.Net.Compilers" version="3.3.1" targetFramework="net471" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net47" developmentDependency="true" />
 </packages>
