--- a/KatlaSport.Services.Tests/packages.config
+++ b/KatlaSport.Services.Tests/packages.config
@@ -7,6 +7,7 @@
   <package id="Fare" version="2.1.1" targetFramework="net471" />
   <package id="FluentAssertions" version="5.3.0" targetFramework="net471" />
   <package id="FluentAssertions.Analyzers" version="0.10.0" targetFramework="net471" />
+  <package id="Microsoft.Net.Compilers" version="3.3.1" targetFramework="net471" developmentDependency="true" />
   <package id="Moq" version="4.8.2" targetFramework="net471" />
   <package id="StyleCop.Analyzers" version="1.0.2" targetFramework="net471" developmentDependency="true" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
