--- a/KatlaSport.Services/KatlaSport.Services.csproj
+++ b/KatlaSport.Services/KatlaSport.Services.csproj
@@ -74,6 +74,7 @@
     <Compile Include="**\*.cs" Exclude="obj\Debug\*.cs;obj\Release\*.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".editorconfig" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
