--- a/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
+++ b/KatlaSport.DataAccess/KatlaSport.DataAccess.csproj
@@ -88,6 +88,10 @@
     <Compile Include="Migrations\201912222241064_Name2.Designer.cs">
       <DependentUpon>201912222241064_Name2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912231550562_Name3.cs" />
+    <Compile Include="Migrations\201912231550562_Name3.Designer.cs">
+      <DependentUpon>201912231550562_Name3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -115,6 +119,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912222241064_Name2.resx">
       <DependentUpon>201912222241064_Name2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912231550562_Name3.resx">
+      <DependentUpon>201912231550562_Name3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
