--- a/KatlaSport.WebApi/KatlaSport.WebApi.csproj
+++ b/KatlaSport.WebApi/KatlaSport.WebApi.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Controllers\ProductCategoriesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="CustomFilters\CustomExceptionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
