--- a/KatlaSport.WebApi/Web.config
+++ b/KatlaSport.WebApi/Web.config
@@ -14,7 +14,9 @@
     <add name="Secrets" userSecretsId="4b91fff0-f2c4-4762-8900-3bce8b6b700f" type="Microsoft.Configuration.ConfigurationBuilders.UserSecretsConfigBuilder, Microsoft.Configuration.ConfigurationBuilders.UserSecrets, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" /></builders>
   </configBuilders>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=KatlaDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=KatlaDB;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+
+    <add name="DefaultConnection" connectionString="Data Source=database122.database.windows.net;Initial Catalog=database122;User ID=adminn;Password=Jcmvbyjub14;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings configBuilders="Secrets">
     <add key="webpages:Version" value="3.0.0.0" />
