--- a/KatlaSport.WebApi/KatlaSport.WebApi.csproj
+++ b/KatlaSport.WebApi/KatlaSport.WebApi.csproj
@@ -218,6 +218,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\KatlaSportWebApi20191226071751 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Web.config">
